# GhostBot

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build-executable.yml  build.yml  debug.yml  make-release.yml  run-tests.yml  run_tests.yml
GhostBot/: __init__.py  __main__.py  abstract_client_window.py  async_task_runner.py  bot_controller.py  client_launcher.py  client_window.py  config.py  image_finder.py  login.py  map_navigation.py  mem_scanner.py  run_client.py  run_server.py  server.py  stats.py
GhostBot/IPC/: client.py  message.py  server.py
GhostBot/Images/: READ-ME.txt
GhostBot/UX/: character_selector.py  main.py  utils.py
GhostBot/controller/: async_bot_controller.py  async_task_runner.py  bot_controller.py  login_controller.py  threaded_bot_controller.py
GhostBot/enums/: bot_status.py
GhostBot/functions/: __init__.py  attack.py  buffs.py  delete.py  fairy.py  petfood.py  regen.py  runner.py  script.py  sell.py
GhostBot/lib/: __init__.py  decorators.py  math.py  talisman_location_names.py  talisman_ui_locations.py  utils.py  var_or_none.py  vk_codes.py
GhostBot/old-UX/: main.py
GhostBot/rpc/: message.py
scripts/: autologin.py
src/GhostBot/: client_launcher.py  client_window.py  config.py  image_finder.py  map_navigation.py  (+4 more)
tests/: test_abstract_client_window.py  test_async_bot_controller.py  test_attack_function.py  test_bot_controller.py  test_client_window.py  test_config.py  test_login_controller.py  test_math.py  test_runner.py  test_talisman_location_names.py  test_var_or_none.py
(+60 files in other folders)
